<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/bg_selector"
		android:paddingBottom="40dp">

		<TextView
			android:id="@+id/order_title_tv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="@dimen/main_padding"
			android:paddingRight="@dimen/main_padding"
			android:paddingTop="@dimen/main_padding"
			android:text="@string/order_identifier"
			android:textColor="@color/text_main"
			android:textSize="18sp"
			/>

		<TextView
			android:id="@+id/order_id_tv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="@dimen/main_padding"
			android:paddingRight="@dimen/main_padding"
			android:paddingTop="@dimen/main_padding_min"
			android:textColor="@color/green_palette"
			android:textSize="14sp"
			app:layout_constraintTop_toBottomOf="@id/order_title_tv"
			tools:text="#12384124"/>

		<TextView
			android:id="@+id/order_time_label_tv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="@dimen/main_padding"
			android:paddingRight="@dimen/main_padding"
			android:paddingTop="@dimen/main_padding"
			android:text="@string/order_arrival_title"
			android:textColor="@color/text_main"
			android:textSize="16sp"
			app:layout_constraintTop_toBottomOf="@id/order_id_tv"
			/>

		<TextView
			android:id="@+id/order_time_tv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="@dimen/main_padding_double"
			android:paddingRight="@dimen/main_padding"
			android:paddingTop="@dimen/main_padding"
			android:textColor="@color/text_secondary"
			android:textSize="16sp"
			android:textAllCaps="true"
			app:layout_constraintLeft_toRightOf="@id/order_time_label_tv"
			app:layout_constraintTop_toBottomOf="@id/order_id_tv"
			tools:text="18:31 PM"
			/>

		<TextView
			android:id="@+id/order_payment_label_tv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="@dimen/main_padding"
			android:paddingRight="@dimen/main_padding"
			android:paddingTop="@dimen/main_padding_half"
			android:text="@string/order_payment_method_title"
			android:textColor="@color/text_main"
			android:textSize="16sp"
			app:layout_constraintTop_toBottomOf="@id/order_time_label_tv"
			/>

		<TextView
			android:id="@+id/order_payment_tv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="@dimen/main_padding"
			android:paddingLeft="@dimen/main_padding_double"
			android:paddingRight="@dimen/main_padding"
			android:paddingTop="@dimen/main_padding_half"
			android:textColor="@color/text_secondary"
			android:textSize="16sp"
			app:layout_constraintLeft_toRightOf="@id/order_payment_label_tv"
			app:layout_constraintTop_toBottomOf="@id/order_time_label_tv"
			tools:text="Cash"

			/>

	</android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>